include/livesplit_core.h

struct Attempt_s;
typedef struct Attempt_s const* AttemptRef;
struct ParseRunResult_s;
typedef struct ParseRunResult_s *restrict ParseRunResult;
typedef struct ParseRunResult_s *restrict ParseRunResultRefMut;
typedef struct ParseRunResult_s const* ParseRunResultRef;
struct Run_s;
typedef struct Run_s *restrict Run;
typedef struct Run_s *restrict RunRefMut;
typedef struct Run_s const* RunRef;
struct RunMetadata_s;
typedef struct RunMetadata_s const* RunMetadataRef;
struct Segment_s;
typedef struct Segment_s *restrict Segment;
typedef struct Segment_s const* SegmentRef;
struct TimeSpan_s;
typedef struct TimeSpan_s const* TimeSpanRef;
/**
Frees the object, allowing it to clean up all of its memory. You need
to call this for every object that you don't use anymore and hasn't
already been freed.
*/
void ParseRunResult_drop(ParseRunResult self);
/**
Moves the actual Run object out of the Result. You may not call this if the
Run wasn't parsed successfully.
*/
Run ParseRunResult_unwrap(ParseRunResult self);
/**
Returns true if the Run got parsed successfully. false is returned otherwise.
*/
bool ParseRunResult_parsed_successfully(ParseRunResultRef self);
/**
Accesses the name of the Parser that parsed the Run.
*/
char const* ParseRunResult_timer_kind(ParseRunResultRef self);
/**
Creates a new Run object with no segments.
*/
Run Run_new(void);
/**
Attempts to parse a splits file from an array by invoking the corresponding
parser for the file format detected. A path to the splits file can be
provided, which helps saving the splits file again later. Additionally you
need to specify if additional files, like external images are allowed to be
loaded. If you are using livesplit-core in a server-like environment, set
this to false. Only client-side applications should set this to true.
*/
ParseRunResult Run_parse(void const* data, size_t length, char const* path, bool load_files);
/**
Attempts to parse a splits file from a file by invoking the corresponding
parser for the file format detected. A path to the splits file can be
provided, which helps saving the splits file again later. Additionally you
need to specify if additional files, like external images are allowed to be
loaded. If you are using livesplit-core in a server-like environment, set
this to false. Only client-side applications should set this to true. On
Unix you pass a file descriptor to this function. On Windows you pass a file
handle to this function. The file descriptor / handle does not get closed.
*/
ParseRunResult Run_parse_file_handle(int64_t handle, char const* path, bool load_files);
/**
Frees the object, allowing it to clean up all of its memory. You need
to call this for every object that you don't use anymore and hasn't
already been freed.
*/
void Run_drop(Run self);
/**
Clones the Run object.
*/
Run Run_clone(RunRef self);
/**
Accesses the name of the game this Run is for.
*/
char const* Run_game_name(RunRef self);
/**
Accesses the Data URL storing the game icon's data. If there is no game
icon, this returns an empty string instead of a URL.
*/
char const* Run_game_icon(RunRef self);
/**
Accesses the name of the category this Run is for.
*/
char const* Run_category_name(RunRef self);
/**
Returns a file name (without the extension) suitable for this Run that
is built the following way:

Game Name - Category Name

If either is empty, the dash is omitted. Special characters that cause
problems in file names are also omitted. If an extended category name is
used, the variables of the category are appended in a parenthesis.
*/
char const* Run_extended_file_name(RunRef self, bool use_extended_category_name);
/**
Returns a name suitable for this Run that is built the following way:

Game Name - Category Name

If either is empty, the dash is omitted. If an extended category name is
used, the variables of the category are appended in a parenthesis.
*/
char const* Run_extended_name(RunRef self, bool use_extended_category_name);
/**
Returns the amount of runs that have been attempted with these splits.
*/
uint32_t Run_attempt_count(RunRef self);
/**
Accesses additional metadata of this Run, like the platform and region
of the game.
*/
RunMetadataRef Run_metadata(RunRef self);
/**
Accesses the time an attempt of this Run should start at.
*/
TimeSpanRef Run_offset(RunRef self);
/**
Returns the amount of segments stored in this Run.
*/
size_t Run_len(RunRef self);
/**
Accesses a certain segment of this Run. You may not provide an out of bounds
index.
*/
SegmentRef Run_segment(RunRef self, size_t index);
/**
Returns the amount attempt history elements are stored in this Run.
*/
size_t Run_attempt_history_len(RunRef self);
/**
Accesses the an attempt history element by its index. This does not store
the actual segment times, just the overall attempt information. Information
about the individual segments is stored within each segment. You may not
provide an out of bounds index.
*/
AttemptRef Run_attempt_history_index(RunRef self, size_t index);
/**
Saves a Run as a LiveSplit splits file (*.lss). If the run is actively in
use by a timer, use the appropriate method on the timer instead, in order to
properly save the current attempt as well.
*/
char const* Run_save_as_lss(RunRef self);
/**
Returns the amount of custom comparisons stored in this Run.
*/
size_t Run_custom_comparisons_len(RunRef self);
/**
Accesses a custom comparison stored in this Run by its index. This includes
`Personal Best` but excludes all the other Comparison Generators. You may
not provide an out of bounds index.
*/
char const* Run_custom_comparison(RunRef self, size_t index);
/**
Pushes the segment provided to the end of the list of segments of this Run.
*/
void Run_push_segment(RunRefMut self, Segment segment);
/**
Sets the name of the game this Run is for.
*/
void Run_set_game_name(RunRefMut self, char const* game);
/**
Sets the name of the category this Run is for.
*/
void Run_set_category_name(RunRefMut self, char const* category);